--- a/pdp.html
+++ b/pdp.html
@@ -15,7 +15,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.css"
     />
     <!-- inner JS -->
-<script src="./js/home.js" defer></script>
+    <script src="./js/pdp.js" defer></script>
     <!-- inner styles -->
     <link rel="stylesheet" href="./css/fonts.css" />
     <link rel="stylesheet" href="./css/pdp.css" />
@@ -268,17 +268,17 @@
                 </ul>
 
                 <ul class="cream-grid">
-                    <li class="cream-item">
+                    <li class="cream-item cream-item--border" id="0">
                         <img src="./images/pdp/after shave balm.svg" alt="after shave balm">
                         <p>OneBlade Black tile after shave balm</p>
                         <span>$3.50</span>
                     </li>
-                    <li class="cream-item">
+                    <li class="cream-item" id="1">
                         <img src="./images/pdp/after shave cream.svg" alt="after shave balm">
                         <p>OneBlade Black tile after shave balm</p>
                         <span>$3.50</span>
                     </li>
-                    <li class="cream-item">
+                    <li class="cream-item" id="2">
                         <img src="./images/pdp/after shave cream 1.svg" alt="after shave balm">
                         <p>OneBlade Black tile after shave balm</p>
                         <span>$3.50</span>
