--- a/plp.html
+++ b/plp.html
@@ -11,6 +11,7 @@
     ></script>
     <!-- inner JS -->
     <script src="./js/home.js" defer></script>
+    <script src="./js/plp.js" defer></script>
 
     <!-- inner styles -->
     <link rel="stylesheet" href="./css/fonts.css" />
